--- a/CV-html/css/style.css
+++ b/CV-html/css/style.css
@@ -106,6 +106,7 @@ nav p:hover{
     background-size: 20px 20px;
     background-repeat: no-repeat;
     padding-left: 30px;
+    cursor: pointer;
 }
 #email{
     background-image: url(../img/flaticons/mail-sq.png);
@@ -130,4 +131,22 @@ nav p:hover{
     background-size: 20px 20px;
     background-repeat: no-repeat;
     padding-left: 30px;
+}
+#map{
+    display: none;
+    flex-direction: row;
+    position: absolute;
+    width: 510px;
+    height: 385px;
+    padding: 5px;
+    background-color: #fff;
+}
+#close{
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+
 }
