--- a/CV-html/css/style.css
+++ b/CV-html/css/style.css
@@ -11,6 +11,7 @@ body{
 h1{font-size: 48px;}
 h2{font-size: 22px;}
 h3{font-size: 18px;}
+ul{list-style-type: disc;}
 a{
     text-decoration: none;
     color: #505050;
@@ -60,6 +61,7 @@ img{
 #pic{
     z-index: 1;
     position: absolute;
+    box-shadow: 8px 3px 8px #505050;
 }
 #pixel{
     z-index: 2;
@@ -90,16 +92,17 @@ section div{
     padding: 30px 80px;
     background-color: #d6d6d6;
 }
+
 .experience{
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 ul{
     padding-left: 30px;
 }
-nav p:hover{
+nav p:hover, #BI:hover, #PyBoot:hover, #EdIT:hover, #Agile:hover{
     border-bottom: 2px solid #fff;
     transition: 0.25s;
-    background-color: rgba(192, 192, 192, 0.25)
+    background-color: rgba(192, 192, 192, 0.25);
 }
 #address{
     background-image: url(../img/flaticons/location-sq.png);
@@ -141,12 +144,104 @@ nav p:hover{
     padding: 5px;
     background-color: #fff;
 }
-#close{
-    width: 25px;
-    height: 25px;
-    text-align: center;
-    position: absolute;
-    top: 5px;
-    right: 5px;
+    #close{
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        position: absolute;
+        top: 5px;
+        right: 5px;
 
+    }
+#EdIT{
+    cursor: pointer;
+    padding-bottom: 0px;
+    /* height: 80px; */
 }
+    #EdIT:hover{
+        /* padding-bottom: 30px; */
+        height: 80px;
+    }
+    #EdIT:hover #EdIT-Program{
+        display: inline;
+        position: absolute;
+        /* top: 840px;
+        left: 292px; */
+        z-index: 3;
+    }
+    #EdIT-Program{
+        display: none;
+        width: auto;
+    }
+
+
+
+#Agile, #PyBoot, #BI{
+    cursor: pointer;
+}
+#Agile-div{
+    display: none;
+    width: 525px;
+    height: 450px;
+    flex-direction: row;
+    position: absolute;
+    top: 495px;
+    left: 530px;
+    padding: 25px 25px 0px 0px;
+}
+    #Agile-btn{
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
+    #Agile-pdf{
+        width: 500px;
+        height: 425px;
+    }
+#PyBoot-div{
+    display: none;
+    width: 525px;
+    height: 450px;
+    flex-direction: row;
+    position: absolute;
+    top: 520px;
+    left: 470px;
+    padding: 25px 25px 0px 0px;
+}
+    #PyBoot-btn{
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
+    #PyBoot-pdf{
+        width: 500px;
+        height: 425px;
+    }
+#BI-div{
+    display: none;
+    width: 525px;
+    height: 450px;
+    flex-direction: row;
+    position: absolute;
+    top: 540px;
+    left: 418px;
+    padding: 25px 25px 0px 0px;
+}
+    #BI-btn{
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
+    #BI-pdf{
+        width: 500px;
+        height: 425px;
+    }
