--- a/CV-html/css/style.css
+++ b/CV-html/css/style.css
@@ -8,9 +8,11 @@ body{
     font-family: 'Heebo', sans-serif;
     color: #505050;
 }
+
 h1{font-size: 48px;}
-h2{font-size: 22px;}
+h2{font-size: 24px;}
 h3{font-size: 18px;}
+
 ul{list-style-type: disc;}
 a{
     text-decoration: none;
@@ -25,7 +27,7 @@ hr{
     margin-top: 10px;
 }
 header{
-    width: 900px;
+    max-width: 900px;
     height: 200px;
     margin: auto;
     padding: 20px;
@@ -38,19 +40,19 @@ header{
     /* position: fixed; */
     border-left: 1px solid #d6d6d6;
 }
-#title{
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    margin: 29px 54.5px 29px 304.5px;
-    position: absolute;
-}
 #profilePic{
     width: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+}
+#title{
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 29px 54.5px 29px 304.5px;
+    position: absolute;
 }
 img{
     width: 160px;
@@ -75,7 +77,7 @@ img{
 }
 main{
     min-height: 600px;
-    width: 900px;
+    max-width: 900px; /* 100% */
     margin: auto;
     display: flex;
 }
@@ -83,18 +85,18 @@ section div{
     padding-bottom: 20px;
 }
 #personal{
-    width: 33%;
+    width: 40%;
     padding: 30px;
     border-left: 1px solid #d6d6d6; 
 }
 #life{
-    width: 67%;
-    padding: 30px 80px;
+    width: 60%;
+    padding: 30px;
     background-color: #d6d6d6;
 }
 
 .experience{
-    margin-bottom: 15px;
+    margin-bottom: 16px;
 }
 ul{
     padding-left: 30px;
@@ -104,42 +106,29 @@ nav p:hover, #BI:hover, #PyBoot:hover, #EdIT:hover, #Agile:hover{
     transition: 0.25s;
     background-color: rgba(192, 192, 192, 0.25);
 }
-#address{
-    background-image: url(../img/flaticons/location-sq.png);
+.contact{
     background-size: 20px 20px;
     background-repeat: no-repeat;
     padding-left: 30px;
+}
+#address{
+    background-image: url(../img/flaticons/location-sq.png);
     cursor: pointer;
 }
 #email{
     background-image: url(../img/flaticons/mail-sq.png);
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    padding-left: 30px;
 }
 #number{
     background-image: url(../img/flaticons/whatsapp-sq.png);
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    padding-left: 30px;
 }
 #linkedin{
     background-image: url(../img/flaticons/linkedin.png);
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    padding-left: 30px;
 }
 #github{
     background-image: url(../img/flaticons/github-sq.png);
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    padding-left: 30px;
 }
 /* #web{
     background-image: url(../img/flaticons/browser-sq.png);
-    background-size: 20px 20px;
-    background-repeat: no-repeat;
-    padding-left: 30px;
 } */
 #map{
     display: none;
@@ -166,7 +155,7 @@ nav p:hover, #BI:hover, #PyBoot:hover, #EdIT:hover, #Agile:hover{
 }
     #EdIT:hover{
         /* padding-bottom: 30px; */
-        height: 80px;
+        height: 3rem;
     }
     #EdIT:hover #EdIT-Program{
         display: inline;
@@ -180,77 +169,375 @@ nav p:hover, #BI:hover, #PyBoot:hover, #EdIT:hover, #Agile:hover{
         width: auto;
     }
 
-
-
 #Agile, #PyBoot, #BI{
     cursor: pointer;
 }
-#Agile-div{
+.cert-div{
     display: none;
     width: 500px;
     height: 425px;
     flex-direction: row;
     position: absolute;
+    background-color: rgba(255, 255, 255, 0.75);
+    /* padding: 25px 25px 0px 0px; */
+}
+    .pdf{
+        width: 500px;
+        height: 425px;
+    }
+    .btn{
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
+#Agile-div{
     top: 495px;
     left: 41%;
-    /* padding: 25px 25px 0px 0px; */
-    background-color: rgba(255, 255, 255, 0.75);
 }
-    #Agile-btn{
-        width: 25px;
-        height: 25px;
-        text-align: center;
-        position: absolute;
-        top: 0px;
-        right: 0px;
-    }
-    #Agile-pdf{
-        width: 500px;
-        height: 425px;
-    }
 #PyBoot-div{
-    display: none;
-    width: 500px;
-    height: 425px;
-    flex-direction: row;
-    position: absolute;
     top: 520px;
     left: 38%;
-    /* padding: 25px 25px 0px 0px; */
-    background-color: rgba(255, 255, 255, 0.75);
 }
-    #PyBoot-btn{
-        width: 25px;
-        height: 25px;
-        text-align: center;
-        position: absolute;
-        top: 0px;
-        right: 0px;
-    }
-    #PyBoot-pdf{
-        width: 500px;
-        height: 425px;
-    }
 #BI-div{
-    display: none;
-    width: 500px;
-    height: 425px;
-    flex-direction: row;
-    position: absolute;
     top: 540px;
     left: 35%;
-    /* padding: 25px 25px 0px 0px; */
-    background-color: rgba(255, 255, 255, 0.75);
 }
-    #BI-btn{
-        width: 25px;
-        height: 25px;
-        text-align: center;
+
+/* @media screen and (min-width: 901px){} */
+/* 
+    320px — 480px: Mobile devices.
+    481px — 768px: iPads, Tablets.
+    769px — 1024px: Small screens, laptops.
+    h1{font-size: 3rem;}   3rem - 48px 
+    h2{font-size: 1.4rem;}   1.4rem - 22px 
+    h3{font-size: 1.1rem;}   1.1rem - 18 px 
+    p, li{font-size: 1rem;}   1rem - 16 px 
+*/
+
+/* @media screen and (min-width: 320px){
+    h1{font-size: 28px;}
+    h2{font-size: 14px;}
+    h3{font-size: 10px;}
+    p, li{font-size: 8px;}
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+} */
+@media screen and (max-width: 380px){
+    h1{font-size: 23px;}
+    h2{font-size: 12px;}
+    h3{font-size: 9px;}
+    p, li{font-size: 7px;}
+    header{
+        height: 130px;
+        padding: 13px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 110px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
         position: absolute;
-        top: 0px;
-        right: 0px;
     }
-    #BI-pdf{
-        width: 500px;
-        height: 425px;
+    img{
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        border: white 4px solid;
     }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 3.5%;
+        border: none;
+    }
+    .contact{
+        background-size: 10px 10px;
+        background-repeat: no-repeat;
+        padding-left: 20px;
+    }
+} 
+@media screen and (min-width: 381px){
+    h1{font-size: 26px;}
+    h2{font-size: 14px;}
+    h3{font-size: 10px;}
+    p, li{font-size: 8px;}
+    header{
+        height: 140px;
+        padding: 14px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 120px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
+        position: absolute;
+    }
+    img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: white 4px solid;
+    }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 3.5%;
+        border: none;
+    }
+    .contact{
+        background-size: 11px 11px;
+        background-repeat: no-repeat;
+        padding-left: 20px;
+    }
+} 
+@media screen and (min-width: 480px){
+    h1{font-size: 33px;}
+    h2{font-size: 16px;}
+    h3{font-size: 12px;}
+    p, li{font-size: 10px;}
+    header{
+        height: 150px;
+        padding: 15px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
+        position: absolute;
+    }
+    img{
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        border: white 4px solid;
+    }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 3.5%;
+        border: none;
+    }
+    .contact{
+        background-size: 13px 13px;
+        background-repeat: no-repeat;
+        padding-left: 20px;
+    }
+} 
+@media screen and (min-width: 590px){
+    h1{font-size: 38px;}
+    h2{font-size: 18px;}
+    h3{font-size: 14px;}
+    p, li{font-size: 12px;}
+    header{
+        height: 160px;
+        padding: 16px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
+        position: absolute;
+    }
+    img{
+        width: 140px;
+        height: 140px;
+        border-radius: 50%;
+        border: white 4px solid;
+    }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 3.5%;
+        border: none;
+    }
+    .contact{
+        background-size: 16px 16px;
+        background-repeat: no-repeat;
+        padding-left: 25px;
+    }
+} 
+@media screen and (min-width: 768px){
+    h1{font-size: 44px;}
+    h2{font-size: 21px;}
+    h3{font-size: 16px;}
+    p, li{font-size: 14px;}
+    header{
+        height: 180px;
+        padding: 18px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 230px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
+        position: absolute;
+    }
+    img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: white 4px solid;
+    }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 3.5%;
+        border: none; 
+    }
+    .contact{
+        background-size: 16px 16px;
+        background-repeat: no-repeat;
+        padding-left: 25px;
+    }
+}
+@media screen and (min-width: 900px){
+    h1{font-size: 48px;}
+    h2{font-size: 24px;}
+    h3{font-size: 18px;}
+    p, li{font-size: 16px;}
+    header{
+        height: 200px;
+        padding: 20px;
+        border: none;
+    }
+    main{
+        width: 100%;
+    }
+    header{
+        width: 100%;
+    }
+    #profilePic{
+        width: 250px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    #title{
+        width: 55.56%;
+        display: flex;
+        flex-direction: column;
+        margin: 29px 6.05% 29px 33.83%;
+        position: absolute;
+    }
+    img{
+        width: 160px;
+        height: 160px;
+        border-radius: 50%;
+        border: white 4px solid;
+    }
+    #pic{
+        z-index: 1;
+        position: absolute;
+        box-shadow: -8px 3px 8px #505050; /* Comentar esto para pdf de safari */
+    }
+    #personal{
+        width: 40%;
+        padding: 30px;
+        border-left: 1px solid #d6d6d6; 
+    }
+    .contact{
+        background-size: 20px 20px;
+        background-repeat: no-repeat;
+        padding-left: 30px;
+    }
+}
